minor change to test travis testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,11 +62,15 @@ jobs:
         - set -e
         - |
           if [ "$TRAVIS_PULL_REQUEST" == "false" -a "$TRAVIS_BRANCH" == "master" ]; then
-              if grep -q "ttoolshed".shed.yml; then
-                  while read -r DIR; do planemo shed_update --shed_target testtoolshed --shed_email "$SHED_EMAIL" --shed_password "$SHED_PASSWORD" --force_repository_creation "$DIR" || exit 1; done < changed_repositories.list
+              if grep -q "ttoolshed" .shed.yml; then
+                  while read -r DIR; do
+                      planemo shed_update --shed_target testtoolshed --shed_email "$SHED_EMAIL" --shed_password "$SHED_PASSWORD" --force_repository_creation "$DIR" || exit 1;
+                  done < changed_repositories.list
               fi
-              if grep -q " toolshed".shed.yml; then
-                  while read -r DIR; do planemo shed_update --shed_target toolshed --shed_email "$SHED_EMAIL" --shed_password "$SHED_PASSWORD" --force_repository_creation "$DIR" || exit 1; done < changed_repositories.list
+              if grep -q " toolshed" .shed.yml; then
+                  while read -r DIR; do
+                      planemo shed_update --shed_target toolshed --shed_email "$SHED_EMAIL" --shed_password "$SHED_PASSWORD" --force_repository_creation "$DIR" || exit 1;
+                  done < changed_repositories.list
               fi
           fi
 
