Add env variable to focus on python linting

--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -22,4 +22,5 @@ jobs:
         uses: github/super-linter@v3
         env:
           DEFAULT_BRANCH: main
+          VALIDATE_PYTHON_FLAKE8: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
