--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -24,5 +24,5 @@ jobs:
           DEFAULT_BRANCH: main
           VALIDATE_PYTHON_FLAKE8: true
           VALIDATE_R: true
-          DEFAULT_WORKSPACE: /tools
+          DEFAULT_WORKSPACE: tools
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
