pythonize sequence_format_converter

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -307,7 +307,8 @@ jobs:
       matrix:
         python-version: [3.7]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' && github.repository_owner == 'drosofff'
+    if: github.ref == 'refs/heads/master'
+    # && github.repository_owner == 'artbio'
     steps:
     - uses: actions/checkout@v2
       with:
