minimal tool for testtoolshed

--- a/tools/tarfast5/.shed.yml
+++ b/tools/tarfast5/.shed.yml
@@ -12,5 +12,5 @@ homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/tarfast5
 toolshed:
   - testtoolshed
-  - toolshed
+#  - toolshed
 
