--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -23,7 +23,7 @@ jobs:
       chunk-list: ${{ steps.discover.outputs.chunk-list }}
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7]
     steps:
     - name: Print github context properties
       run: |
@@ -89,7 +89,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7]
     steps:
     # checkout the repository
     # and use it as the current working directory
@@ -122,7 +122,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7]
     steps:
     # checkout the repository to master
     # and use it as the current working directory
@@ -209,7 +209,7 @@ jobs:
       fail-fast: false
       matrix:
         chunk: ${{ fromJson(needs.setup.outputs.chunk-list) }}
-        python-version: [3.7, 3.8]
+        python-version: [3.7]
     services:
       postgres:
         image: postgres:11
@@ -267,7 +267,7 @@ jobs:
     needs: [setup, test]
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7]
     # This job runs on Linux
     runs-on: ubuntu-latest
     steps:
@@ -305,7 +305,7 @@ jobs:
     needs: [setup, lint, flake8, lintr, combine_outputs]
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
     # && github.repository_owner == 'artbio'
