--- a/tools/ont_fast5_api/.shed.yml
+++ b/tools/ont_fast5_api/.shed.yml
@@ -2,6 +2,7 @@ name: ont_fast5_api
 owner: artbio
 remote_repository_url: "https://github.com/artbio/tools-artbio/tree/master/tools/ont_fast5_api"
 homepage_url: "https://github.com/nanoporetech/ont_fast5_api/"
+description: "ont_fast5_api is a simple interface to HDF5 files of the Oxford Nanopore FAST5 file format."
 long_description: |
   ont_fast5_api is a simple interface to HDF5 files of the Oxford Nanopore FAST5 file format.
   It provides:
