add better credit

--- a/tools/BigWigToBedGraph/.shed.yml
+++ b/tools/BigWigToBedGraph/.shed.yml
@@ -5,7 +5,8 @@ description: Converts a bigWig file to bedGraph format
 long_description: |
   Converts a bigWig file to bedGraph format
 
-  older tool without conda environment : https://github.com/bgruening/galaxytools/tree/master/tools/bigwig_to_bedgraph
+  credit: this Galaxy wrapper was originally developped by Bjoern Gruening
+  https://github.com/bgruening/galaxytools/tree/master/tools/bigwig_to_bedgraph
 categories:
   - Convert Formats
 homepage_url: http://artbio.fr
