rename tool to remove upper case

--- a/tools/bigwig_to_bedgraph/.shed.yml
+++ b/tools/bigwig_to_bedgraph/.shed.yml
@@ -1,6 +1,6 @@
 # .shed.yml supporting automatic pushes.
 owner: artbio
-name: bigwig_to_bedGraph
+name: bigwig_to_bedgraph
 description: Converts a bigWig file to bedGraph format
 long_description: |
   Converts a bigWig file to bedGraph format
@@ -10,6 +10,6 @@ long_description: |
 categories:
   - Convert Formats
 homepage_url: http://artbio.fr
-remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/BigWigToBedGraph
+remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/master/tools/bigwig_to_bedgraph
 toolshed:
   - toolshed
