--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,7 +52,7 @@ jobs:
       with:
         fetch-depth: 1
     - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
-      uses: galaxyproject/ planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1.0.3
       id: discover
       with:
         create-cache: ${{ steps.cache-pip.outputs.cache-hit != 'true' || steps.cache-planemo.outputs.cache-hit != 'true' }}
@@ -102,7 +102,7 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
     - name: Planemo test
-      uses: galaxyproject/ planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1.0.3
       id: test
       with:
         mode: test
@@ -143,7 +143,7 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
     - name: Combine outputs
-      uses: galaxyproject/ planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1.0.3
       id: combine
       with:
         mode: combine
@@ -173,7 +173,7 @@ jobs:
 
           [1]: ${{ steps.vars.outputs.run-url }}
     - name: Check outputs
-      uses: galaxyproject/ planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1.0.3
       id: check
       with:
         mode: check
