--- a/tools/gatk4/.shed.yml
+++ b/tools/gatk4/.shed.yml
@@ -7,10 +7,11 @@ long_description: |
   with the assembly-based machinery of HaplotypeCaller.
   The MuTect2 wrapper mirrors the IUC wrapper
   https://github.com/galaxyproject/tools-iuc/blob/master/tools/gatk4/gatk4_Mutect2.xml.
-  However, appropriate code are made in the original wrapper in order to
+  However, appropriate code changes are made in the original wrapper in order to
   expose parameters or outputs required to run the FilterMutectCall wrapper.
   
-  FilterMutectCall applies filters to the raw output of Mutect2. see https://gatk.broadinstitute.org/hc/en-us/articles/4409917406107-FilterMutectCalls#--reference
+  FilterMutectCall applies filters to the raw output of Mutect2.
+  see https://gatk.broadinstitute.org/hc/en-us/articles/4409917406107-FilterMutectCalls#--reference
   for details. Parameters are contained in M2FiltersArgumentCollection and described in
   https://github.com/broadinstitute/gatk/tree/master/docs/mutect/mutect.pdf. 
 
