--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -2,8 +2,14 @@ name: Galaxy Tool Linting and Tests for push and PR
 on: [push, pull_request]
 env:
   GALAXY_FORK: galaxyproject
-  GALAXY_BRANCH: release_21.09
+  GALAXY_BRANCH: release_22.01
   MAX_CHUNKS: 4
+  MAX_FILE_SIZE: 1M
+concurrency:
+  # Group runs by PR, but keep runs on the default branch separate
+  # because we do not want to cancel ToolShed uploads
+  group: pr-${{ (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main') && github.run_number || github.ref }}
+  cancel-in-progress: true
 jobs:
   # the setup job does two things:
   # 1. cache the pip cache and .planemo
@@ -23,7 +29,7 @@ jobs:
       chunk-list: ${{ steps.discover.outputs.chunk-list }}
     strategy:
       matrix:
-        python-version: [3.7]
+        python-version: ['3.7']
     steps:
     - name: Print github context properties
       run: |
@@ -62,7 +68,7 @@ jobs:
       with:
         fetch-depth: 0
     - name: Fake a Planemo run to update cache and determine commit range, repositories, and chunks
-      uses: galaxyproject/planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1
       id: discover
       with:
         create-cache: ${{ steps.cache-pip.outputs.cache-hit != 'true' || steps.cache-planemo.outputs.cache-hit != 'true' }}
@@ -84,15 +90,13 @@ jobs:
   lint:
     name: Lint tool-list
     needs: setup
-    if: needs.setup.outputs.repository-list != ''
+    if: ${{ needs.setup.outputs.repository-list != '' || needs.setup.outputs.tool-list != '' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7]
+        python-version: ['3.7']
     steps:
-    # checkout the repository
-    # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
@@ -106,26 +110,30 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
     - name: Planemo lint
-      uses: galaxyproject/planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1
       id: lint
       with:
         mode: lint
         repository-list: ${{ needs.setup.outputs.repository-list }}
         tool-list: ${{ needs.setup.outputs.tool-list }}
+    - uses: actions/upload-artifact@v2
+      if: ${{ failure() }}
+      with:
+        name: 'Tool linting output'
+        path: lint_report.txt
+
 
   # flake8 of Python scripts in the changed repositories
   flake8:
     name: Lint Python scripts
     needs: setup
-    if: needs.setup.outputs.repository-list != ''
+    if: ${{ needs.setup.outputs.repository-list != '' }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7]
+        python-version: ['3.7']
     steps:
-    # checkout the repository to master
-    # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
@@ -142,18 +150,22 @@ jobs:
       run: pip install flake8 flake8-import-order
     - name: Flake8
       run: echo '${{ needs.setup.outputs.repository-list }}' | xargs -d '\n' flake8
+    - uses: actions/upload-artifact@v2
+      if: ${{ failure() }}
+      with:
+        name: 'Python linting output'
+        path: pylint_report.txt
 
   lintr:
     name: Lint R scripts
     needs: setup
-    if: needs.setup.outputs.repository-list != ''
-    runs-on: ubuntu-latest
+    if: ${{ needs.setup.outputs.repository-list != '' }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-20.04]
         r-version: [4.0.1]
     steps:
-    # checkout the repository to master
-    # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
@@ -196,15 +208,47 @@ jobs:
         }
         quit(status = status)
       shell: Rscript {0}
+    - uses: actions/upload-artifact@v2
+      if: ${{ failure() }}
+      with:
+        name: 'R linting output'
+        path: rlint_report.txt
+
+  file_sizes:
+    name: Check file sizes
+    needs: setup
+    if: ${{ github.event_name == 'pull_request' && needs.setup.outputs.repository-list != '' }}
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Check file sizes
+      run: |
+        touch file_size_report.txt
+        git diff --diff-filter=d --name-only ${{ needs.setup.outputs.commit-range }} > git.diff
+        while read line; do
+          find "$line" -type f -size +${{ env.MAX_FILE_SIZE }} >> file_size_report.txt
+        done < git.diff
+        if [[ -s file_size_report.txt ]]; then
+          echo "Files larger than ${{ env.MAX_FILE_SIZE }} found"
+          cat file_size_report.txt
+          exit 1
+        fi
+    - uses: actions/upload-artifact@v2
+      if: ${{ failure() }}
+      with:
+        name: 'File size report'
+        path: file_size_report.txt
 
   # Planemo test the changed repositories, each chunk creates an artifact
   # containing HTML and JSON reports for the executed tests
   test:
     name: Test tools
     # This job runs on Linux
-    runs-on: ubuntu-latest
     needs: setup
     if: needs.setup.outputs.repository-list != ''
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -220,8 +264,6 @@ jobs:
         ports:
           - 5432:5432
     steps:
-    # checkout the repository
-    # and use it as the current working directory
     - uses: actions/checkout@v2
       with:
         fetch-depth: 1
@@ -240,10 +282,8 @@ jobs:
       with:
         path: ~/.planemo
         key: planemo_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
-    - name: Install tzdata
-      run: sudo apt-get install tzdata
     - name: Planemo test
-      uses: galaxyproject/planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1
       id: test
       with:
         mode: test
@@ -265,11 +305,11 @@ jobs:
   combine_outputs:
     name: Combine chunked test results
     needs: [setup, test]
+    if: ${{ needs.setup.outputs.repository-list != '' }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
-    # This job runs on Linux
-    runs-on: ubuntu-latest
+        python-version: ['3.7']
     steps:
     - uses: actions/download-artifact@v2
       with:
@@ -284,7 +324,7 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
     - name: Combine outputs
-      uses: galaxyproject/planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1
       id: combine
       with:
         mode: combine
@@ -294,7 +334,7 @@ jobs:
         name: 'All tool test results'
         path: upload
     - name: Check outputs
-      uses: galaxyproject/planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1
       id: check
       with:
         mode: check
@@ -303,12 +343,11 @@ jobs:
   deploy:
     name: Deploy
     needs: [setup, lint, flake8, lintr, combine_outputs]
+    if: ${{ (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' ) && github.repository_owner == 'galaxyproject' }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7]
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
-    # && github.repository_owner == 'artbio'
+        python-version: ['3.7']
     steps:
     - uses: actions/checkout@v2
       with:
@@ -323,7 +362,7 @@ jobs:
         path: ~/.cache/pip
         key: pip_cache_py_${{ matrix.python-version }}_gxy_${{ needs.setup.outputs.galaxy-head-sha }}
     - name: Deploy on testtoolshed
-      uses: galaxyproject/planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1
       with:
         mode: deploy
         repository-list: ${{ needs.setup.outputs.repository-list }}
@@ -331,9 +370,31 @@ jobs:
         shed-key: ${{ secrets.TTS_API_KEY }}
       continue-on-error: true
     - name: Deploy on toolshed
-      uses: galaxyproject/planemo-ci-action@v1.0.3
+      uses: galaxyproject/planemo-ci-action@v1
       with:
         mode: deploy
         repository-list: ${{ needs.setup.outputs.repository-list }}
         shed-target: toolshed
         shed-key: ${{ secrets.TS_API_KEY }}
+
+  determine-success:
+    name: Check workflow success
+    needs: [setup, lint, flake8, lintr, file_sizes, combine_outputs]
+    if: ${{ always() && github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check tool lint status
+      if: ${{ needs.lint.result != 'success' && needs.flake8.result != 'skipped' }}
+      run: exit 1
+    - name: Indicate Python script lint status
+      if: ${{ needs.flake8.result != 'success' && needs.flake8.result != 'skipped' }}
+      run: exit 1
+    - name: Indicate R script lint status
+      if: ${{ needs.lintr.result != 'success' && needs.lintr.result != 'skipped' }}
+      run: exit 1
+    - name: Indicate file size check status
+      if: ${{ needs.file_sizes.result != 'success' && needs.file_sizes.result != 'skipped' }}
+      run: exit 1
+    - name: Check tool test status
+      if: ${{ needs.combine_outputs.result != 'success' && needs.combine_outputs.result != 'skipped' }}
+      run: exit 1
