--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,8 +1,20 @@
 name: Galaxy Tool Linting and Tests for push and PR
-on: [push, pull_request]
+on:
+  pull_request:
+    paths-ignore:
+      - '.github/**'
+      - 'deprecated/**'
+      - '*'
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '.github/**'
+      - 'deprecated/**'
+      - '*'
 env:
   GALAXY_FORK: galaxyproject
-  GALAXY_BRANCH: release_23.1
+  GALAXY_BRANCH: release_23.2
   MAX_CHUNKS: 4
   MAX_FILE_SIZE: 1M
 concurrency:
