complete ez_histograms drafting

--- a/tools/ez_histograms/.shed.yml
+++ b/tools/ez_histograms/.shed.yml
@@ -1,14 +1,15 @@
 categories:
   - Visualization
-description: gplot heatmap.2 function adapted for plotting large heatmaps
-homepage_url: https://github.com/cran/gplots
+  - Statistics
+description: ggplot2 histograms and density plots
+homepage_url: https://github.com/tidyverse/ggplot2
 long_description: |
-  This tool uses the heatmap.2 function from the R gplots package to create a heatmap.
-  A heatmap is a false color image with a dendrogram added to the left side and/or to the top.
-  Reordering of the rows and columns according to some set of values
-  (row or column means) within the restrictions imposed by the dendrogram may be carried out.
-  3 parameters can be adjust to better plot heatmaps with a high number of rows
+  This tool produces histograms or density plots from any tabular datasets, using ggplot2.
+  You may provide headerless tables as well as tables with column headers.
+  Any non-numeric columns will be filtered out. Your first column may contains row names,
+  but it will also work if your first column already corresponds to the numeric values of
+  a variable.
 owner: artbio
-name: high_dim_heatmap
-remote_repository_url: https://github.com/artbio/tools-artbio/tree/main/tools/high_dim_heatmap
+name: ez_histograms
+remote_repository_url: https://github.com/artbio/tools-artbio/tree/main/tools/ez_histograms
 type: unrestricted
