--- a/tools/gsc_high_dimensions_visualisation/.shed.yml
+++ b/tools/gsc_high_dimensions_visualisation/.shed.yml
@@ -9,6 +9,7 @@ long_description: |
 categories:
   - Transcriptomics
   - Visualization
+  - Single Cell
 homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/main/tools/gsc_high_dimension_visualization
 toolshed:
