--- a/tools/gsc_mannwhitney_de/.shed.yml
+++ b/tools/gsc_mannwhitney_de/.shed.yml
@@ -5,6 +5,7 @@ description: Perform a mann-whitney differential testing between two sets of gen
 long_description:
 categories:
   - Transcriptomics
+  - Single Cell
 homepage_url: http://artbio.fr
 remote_repository_url: https://github.com/ARTbio/tools-artbio/tree/main/tools/gsc_mannwhitney_de
 toolshed:
