--- a/tools/wisecondorx/.shed.yml
+++ b/tools/wisecondorx/.shed.yml
@@ -1,10 +1,10 @@
 # .shed.yml supporting automatic pushes.
 owner: artbio
 name: wisecondorx
-description: Infer copy number variations from BAM files using WisecondorX
+description: WisecondorX
 long_description: |
-  Infer copy number variations from BAM files using WisecondorX
-  see GitHub repo: https://github.com/CenterForMedicalGeneticsGhent/WisecondorX/tree/master
+  Improved copy number detection for routine shallow whole-genome sequencing.
+  See homepage URL for manual and code.
 categories:
   - Variant Analysis
 homepage_url: https://github.com/CenterForMedicalGeneticsGhent/WisecondorX/tree/master
