--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -3,14 +3,13 @@ on:
   pull_request:
     paths-ignore:
       - 'deprecated/**'
-      - '*'
+      - 'README.md'
   push:
     branches:
       - main
     paths-ignore:
-      - '.github/**'
       - 'deprecated/**'
-      - '*'
+      - 'README.md'
 env:
   GALAXY_FORK: galaxyproject
   GALAXY_BRANCH: release_25.0
