--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -3,14 +3,13 @@ on:
   pull_request:
     paths-ignore:
       - 'deprecated/**'
-      - '*'
+      - 'README.md'
   push:
     branches:
       - main
     paths-ignore:
-      - '.github/**'
       - 'deprecated/**'
-      - '*'
+      - 'README.md'
 env:
   GALAXY_FORK: galaxyproject
   GALAXY_BRANCH: release_25.0
@@ -302,6 +301,15 @@ jobs:
         galaxy-slots: ${{ steps.cpu-cores.outputs.count }}
         # Limit each test to 15 minutes
         test_timeout: 1800
+# ... dans le job "test", après l'étape "Planemo test" ...
+
+    - name: Check for existence of test reports before upload
+      run: |
+        echo "Checking contents of 'upload' directory:"
+        ls -lR upload
+
+# ...  fin du check
+
     - uses: actions/upload-artifact@v4
       with:
         name: 'Tool test output ${{ matrix.chunk }}'
@@ -321,7 +329,7 @@ jobs:
       matrix:
         python-version: ['3.11']
     steps:
-    - uses: actions/download-artifact@v5
+    - uses: actions/download-artifact@v4
       with:
         path: artifacts
     - uses: actions/setup-python@v6
