--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -288,6 +288,11 @@ jobs:
       id: cpu-cores
     - name: Clean dotnet folder for space
       run: rm -Rf /usr/share/dotnet
+
+    - name: Install GNU coreutils on Linux
+      if: runner.os == 'Linux'
+      run: sudo apt-get update && sudo apt-get install -y coreutils
+
     - name: Planemo test
       uses: galaxyproject/planemo-ci-action@v1
       id: test
@@ -301,14 +306,6 @@ jobs:
         galaxy-slots: ${{ steps.cpu-cores.outputs.count }}
         # Limit each test to 15 minutes
         test_timeout: 1800
-# ... dans le job "test", après l'étape "Planemo test" ...
-
-    - name: Check for existence of test reports before upload
-      run: |
-        echo "Checking contents of 'upload' directory:"
-        ls -lR upload
-
-# ...  fin du check
 
     - uses: actions/upload-artifact@v4
       with:
